[SQONE-291] feat: adjustments

--- a/wp-content/themes/core/routes/unsupported_browser/css/unsupported-browser.pcss
+++ b/wp-content/themes/core/routes/unsupported_browser/css/unsupported-browser.pcss
@@ -117,6 +117,10 @@ a {
 		font-weight: var(--legacy-heading-font-weight);
 		margin: var(--legacy-heading-spacing);
 	}
+
+	a{
+		color: var(--legacy-color-link)
+	}
 }
 
 /* -----------------------------------------------------------------------------
