[SQONE-291] Fix incorrect BEM formatting

--- a/wp-content/themes/core/routes/unsupported_browser/css/unsupported-browser.pcss
+++ b/wp-content/themes/core/routes/unsupported_browser/css/unsupported-browser.pcss
@@ -78,7 +78,7 @@ a {
 .site-header {
 }
 
-.site-header--underline {
+.site-header__underline {
 	border-bottom: 1px solid var(--color-black);
 }
 
@@ -133,7 +133,7 @@ a {
 	padding: var(--legacy-footer-padding);
 }
 
-.site-footer--overline {
+.site-footer__overline {
 	border-top: 1px solid var(--color-black);
 }
 
