--- a/wp-content/themes/core/assets/css/src/theme/actions/actions.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/actions/actions.pcss
@@ -118,3 +118,18 @@ a.a-cta,
 .a-close {
 	@mixin a-close;
 }
+
+/* -----------------------------------------------------------------------------
+ *
+ * Tag Link
+ *
+ * Notes:
+ * + A tag mixing that is also happens to be a link
+ *
+ * Example:
+ * <a class="a-tag-link">...</a>
+ *
+ * ----------------------------------------------------------------------------- */
+.a-tag-link {
+	@mixin a-tag-link;
+}
