--- a/wp-content/themes/core/components/share/css/share.pcss
+++ b/wp-content/themes/core/components/share/css/share.pcss
@@ -13,13 +13,16 @@
 }
 
 .social-share-networks {
-
+	@media (--viewport-medium) {
+		display: flex;
+		flex-flow: row nowrap;
+	}
 }
 
 .social-share-networks__item {
-
+	margin-left: var(--spacer-30);
 }
 
 .social-share-networks__anchor {
-
+	font-size: 24px;
 }
