--- a/wp-content/themes/core/components/header/subheader/css/subheader.pcss
+++ b/wp-content/themes/core/components/header/subheader/css/subheader.pcss
@@ -8,7 +8,6 @@
 	position: relative;
 	display: flex;
 	align-items: center;
-	background: var(--color-grey-light);
 	padding: var(--spacer-50) 0;
 	margin-bottom: var(--spacer-80);
 
@@ -17,14 +16,12 @@
 	}
 }
 
-/* CASE: Page with featured image */
-.c-subheader--has-image {
+/* CASE: Page with featured image or a background color */
+.c-subheader--has-background-color {
+	background: var(--color-grey-light);
+	color: var(--color-white);
 	@media (--viewport-medium) {
 		align-items: flex-end;
-	}
-
-	.c-subheader__content {
-		color: var(--color-white);
 	}
 }
 
@@ -36,8 +33,43 @@
 	position: relative;
 }
 
+.c-subheader__content--single {
+	max-width: var(--grid-max-width-staggered-double);
+	margin: 0 auto;
+}
+
 .c-subheader__title {
 	margin-top: var(--spacer-20);
+}
+
+.c-subheader__meta {
+	font-family: var(--font-family-serif);
+	font-size: var(--font-size-body);
+	max-width: var(--grid-max-width-staggered-double);
+	margin: 48px auto 0;
+	padding: var(--spacer-40) 0;
+	border-top: 1px solid var(--color-border);
+	border-bottom: 1px solid var(--color-border);
+
+	@media (--viewport-medium) {
+		display: flex;
+		flex-flow: row nowrap;
+		justify-content: space-between;
+		align-items: flex-end;
+		gap: var(--grid-gutter);
+	}
+
+	.social-share-networks__item:first-child {
+		margin-left: 0;
+	}
+}
+
+.c-subheader__meta-author {
+
+}
+
+.c-subheader__meta-date {
+
 }
 
 /* -----------------------------------------------------------------------------
