--- a/wp-content/themes/core/components/header/subheader/css/subheader.pcss
+++ b/wp-content/themes/core/components/header/subheader/css/subheader.pcss
@@ -47,7 +47,7 @@
 	font-family: var(--font-family-serif);
 	font-size: var(--font-size-body);
 	max-width: var(--grid-max-width-staggered-double);
-	margin: 48px auto 0;
+	margin: var(--spacer-60) auto 0;
 	padding: var(--spacer-40) 0;
 	border-top: 1px solid var(--color-border);
 	border-bottom: 1px solid var(--color-border);
