[SQONE-275] Add tags_list component

--- a/wp-content/themes/core/assets/css/src/theme/actions/actions.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/actions/actions.pcss
@@ -133,3 +133,16 @@ a.a-cta,
 .a-tag-link {
 	@mixin a-tag-link;
 }
+
+.a-tag-link--secondary {
+	color: var(--color-black);
+	background: var(--color-neutral-10);
+
+	&:visited {
+		color: var(--color-black);
+	}
+
+	&:hover {
+		color: var(--color-black);
+	}
+}
