--- a/wp-content/themes/core/components/header/subheader/css/subheader.pcss
+++ b/wp-content/themes/core/components/header/subheader/css/subheader.pcss
@@ -35,7 +35,7 @@
 }
 
 .c-subheader__content--single {
-	max-width: var(--grid-max-width-staggered-double);
+	max-width: var(--grid-8-col);
 	margin: 0 auto;
 }
 
@@ -46,7 +46,7 @@
 .c-subheader__meta {
 	font-family: var(--font-family-serif);
 	font-size: var(--font-size-body);
-	max-width: var(--grid-max-width-staggered-double);
+	max-width: var(--grid-8-col);
 	margin: var(--spacer-60) auto 0;
 	padding: var(--spacer-40) 0;
 	border-top: 1px solid var(--color-border);
@@ -70,7 +70,7 @@
 }
 
 .c-subheader__meta-date {
-
+	font-size: var(--font-size-body-small);
 }
 
 /* -----------------------------------------------------------------------------
