[SQONE-275] add routes folder to the build system

--- a/wp-content/themes/core/assets/css/src/theme/master.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/master.pcss
@@ -27,5 +27,8 @@
 /* All Components */
 @import-glob "../../../../components/**/index.pcss";
 
+/* All Routes */
+@import-glob "../../../../routes/**/index.pcss";
+
 /* All Integrations */
 @import-glob "../../../../integrations/**/index.pcss";
