[SQONE-275] moar padding adjustments

--- a/wp-content/themes/core/components/header/subheader/css/subheader.pcss
+++ b/wp-content/themes/core/components/header/subheader/css/subheader.pcss
@@ -8,11 +8,9 @@
 	position: relative;
 	display: flex;
 	align-items: center;
-	padding: var(--spacer-50) 0;
-	margin-bottom: var(--spacer-80);
 
 	@media (--viewport-medium) {
-		padding: var(--spacer-80) 0;
+		padding-top: var(--spacer-80);
 	}
 }
 
