--- a/wp-content/themes/core/routes/single/css/single.pcss
+++ b/wp-content/themes/core/routes/single/css/single.pcss
@@ -2,3 +2,8 @@
 .item-single__content {
 	margin-top: var(--spacer-60);
 }
+
+.item-single__featured-image {
+	max-width: var(--grid-10-col);
+	margin: 0 auto;
+}
