[SQONE-275] Add icon handler to link. Add to pagination

--- a/wp-content/themes/core/components/pagination/css/pagination.pcss
+++ b/wp-content/themes/core/components/pagination/css/pagination.pcss
@@ -55,18 +55,15 @@ Pagination Single
 	}
 
 	.pagination__item-link--next {
+		font-family: var(--font-family-sans-serif);
 
-		svg {
-			margin: 0 0 3px 10px;
-			vertical-align: middle;
+		&:after {
+			padding-left: 10px;
+			margin-top: 5px;
 		}
 	}
 
 	.pagination__item-link--previous {
 
-		svg {
-			margin: 0 10px 3px 0;
-			vertical-align: middle;
-		}
 	}
 }
