[SQONE-275] caption style

--- a/wp-content/themes/core/routes/single/css/single.pcss
+++ b/wp-content/themes/core/routes/single/css/single.pcss
@@ -7,3 +7,10 @@
 	max-width: var(--grid-10-col);
 	margin: 0 auto;
 }
+
+.item-single__featured-image-caption {
+	width: var(--grid-8-col);
+	margin: 10px auto;
+	font-size: var(--font-size-body-xsmall);
+	font-family: var(--font-family-sans-serif);
+}
