--- a/wp-content/themes/core/components/share/css/share.pcss
+++ b/wp-content/themes/core/components/share/css/share.pcss
@@ -13,9 +13,12 @@
 }
 
 .social-share-networks {
+	display: flex;
+	flex-flow: row nowrap;
+	margin-top: var(--spacer-30);
+
 	@media (--viewport-medium) {
-		display: flex;
-		flex-flow: row nowrap;
+		margin-top: 0;
 	}
 }
 
