--- a/wp-content/themes/core/routes/single/css/single.pcss
+++ b/wp-content/themes/core/routes/single/css/single.pcss
@@ -9,8 +9,14 @@
 }
 
 .item-single__featured-image-caption {
-	width: var(--grid-8-col);
-	margin: 10px auto;
+	margin: 10px var(--grid-margin-small);
 	font-size: var(--font-size-body-xsmall);
+	line-height: 24px;
 	font-family: var(--font-family-sans-serif);
+	border-bottom: 1px solid var(--color-border);
+
+	@media (--viewport-medium) {
+		width: var(--grid-8-col);
+		margin: 10px auto;
+	}
 }
