[SQONE-275] CR: move code to mixin

--- a/wp-content/themes/core/assets/css/src/theme/actions/_mixins.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/actions/_mixins.pcss
@@ -320,3 +320,16 @@
 		outline: 1px dashed;
 	}
 }
+
+@define-mixing a-tag-link--secondary {
+	color: var(--color-black);
+	background: var(--color-neutral-10);
+
+	&:visited {
+		color: var(--color-black);
+	}
+
+	&:hover {
+		color: var(--color-black);
+	}
+}
