--- a/wp-content/themes/core/assets/css/src/theme/actions/actions.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/actions/actions.pcss
@@ -135,14 +135,5 @@ a.a-cta,
 }
 
 .a-tag-link--secondary {
-	color: var(--color-black);
-	background: var(--color-neutral-10);
-
-	&:visited {
-		color: var(--color-black);
-	}
-
-	&:hover {
-		color: var(--color-black);
-	}
+	@mixin a-tag-link--secondary;
 }
