[SQONE-275] CR: move code to mixin

--- a/wp-content/themes/core/assets/css/src/theme/actions/_mixins.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/actions/_mixins.pcss
@@ -321,7 +321,7 @@
 	}
 }
 
-@define-mixing a-tag-link--secondary {
+@define-mixin a-tag-link--secondary {
 	color: var(--color-black);
 	background: var(--color-neutral-10);
 
