[SQONE-275] CR: convert px to line hieght for better cross browser

--- a/wp-content/themes/core/components/footer/single_footer/css/single_footer.pcss
+++ b/wp-content/themes/core/components/footer/single_footer/css/single_footer.pcss
@@ -40,11 +40,11 @@
 
 .c-single-footer__author-name {
 	font-size: var(--font-size-body);
-	line-height: 32px;
+	line-height: 2;
 	font-weight: bold;
 }
 
 .c-single-footer__author-description {
 	font-size: var(--font-size-body-small);
-	line-height: 32px;
+	line-height: 2;
 }
