[SQONE-275] CR: remove no-specific padding

--- a/wp-content/themes/core/components/footer/single_footer/css/single_footer.pcss
+++ b/wp-content/themes/core/components/footer/single_footer/css/single_footer.pcss
@@ -33,7 +33,7 @@
 
 	@media (--viewport-medium) {
 		margin: var(--spacer-60) auto 0;
-		padding: var(--spacer-50) 0 0 0;
+		padding-top: var(--spacer-50);
 	}
 }
 
