[SQONE-275] CR: remove no-specific padding

--- a/wp-content/themes/core/components/footer/single_footer/css/single_footer.pcss
+++ b/wp-content/themes/core/components/footer/single_footer/css/single_footer.pcss
@@ -26,7 +26,7 @@
 .c-single-footer__author {
 	max-width: var(--grid-8-col);
 	margin: var(--spacer-50) auto 0;
-	padding: var(--spacer-50) 0 0 0;
+	padding-top: var(--spacer-50);
 	font-family: var(--font-family-serif);
 	font-style: italic;
 	border-top: 1px solid var(--color-border);
