[SQONE-275] CR: remove no-specific padding

--- a/wp-content/themes/core/components/header/subheader/css/subheader.pcss
+++ b/wp-content/themes/core/components/header/subheader/css/subheader.pcss
@@ -19,7 +19,7 @@
 	margin-bottom: 0;
 
 	@media (--viewport-medium) {
-		padding: var(--spacer-80) 0 0 0;
+		padding-top: var(--spacer-80);
 	}
 }
 
