[SQONE-275] CR: comments

--- a/wp-content/themes/core/routes/single/css/single.pcss
+++ b/wp-content/themes/core/routes/single/css/single.pcss
@@ -1,13 +1,27 @@
+/* -----------------------------------------------------------------------------
+ *
+ * Route: Single
+ *
+ * ----------------------------------------------------------------------------- */
 
+/*
+Single Content
+ */
 .item-single__content {
 	margin-top: var(--spacer-60);
 }
 
+/*
+Single Featured Image
+ */
 .item-single__featured-image {
 	max-width: var(--grid-10-col);
 	margin: 0 auto;
 }
 
+/*
+Single Featured Image Caption
+ */
 .item-single__featured-image-caption {
 	margin: 10px var(--grid-margin-small);
 	font-size: var(--font-size-body-xsmall);
