--- a/wp-content/themes/core/routes/single/css/single.pcss
+++ b/wp-content/themes/core/routes/single/css/single.pcss
@@ -5,23 +5,17 @@
  * ----------------------------------------------------------------------------- */
 
 /*
-Single Content
+Item Single
  */
 .item-single__content {
 	margin-top: var(--spacer-60);
 }
 
-/*
-Single Featured Image
- */
 .item-single__featured-image {
 	max-width: var(--grid-10-col);
 	margin: 0 auto;
 }
 
-/*
-Single Featured Image Caption
- */
 .item-single__featured-image-caption {
 	margin: 10px var(--grid-margin-small);
 	font-size: var(--font-size-body-xsmall);
@@ -33,4 +27,52 @@ Single Featured Image Caption
 		width: var(--grid-8-col);
 		margin: 10px auto;
 	}
+}
+
+
+/*
+Single Footer
+ */
+.c-single-footer {
+
+}
+
+.c-single-footer__content {
+	max-width: var(--grid-8-col);
+	margin: var(--spacer-60) auto;
+
+	@media (--viewport-medium) {
+		display: flex;
+		flex-flow: row nowrap;
+		justify-content: space-between;
+	}
+
+	.social-share-networks__item:first-child {
+		margin-left: 0;
+	}
+}
+
+.c-single-footer__author {
+	max-width: var(--grid-8-col);
+	margin: var(--spacer-50) auto 0;
+	padding-top: var(--spacer-50);
+	font-family: var(--font-family-serif);
+	font-style: italic;
+	border-top: 1px solid var(--color-border);
+
+	@media (--viewport-medium) {
+		margin: var(--spacer-60) auto 0;
+		padding-top: var(--spacer-50);
+	}
+}
+
+.c-single-footer__author-name {
+	font-size: var(--font-size-body);
+	line-height: 2;
+	font-weight: bold;
+}
+
+.c-single-footer__author-description {
+	font-size: var(--font-size-body-small);
+	line-height: 2;
 }
