[SQONE-275] CR: use core utlity classes instead of custom classes

--- a/wp-content/themes/core/components/header/subheader/css/subheader.pcss
+++ b/wp-content/themes/core/components/header/subheader/css/subheader.pcss
@@ -56,7 +56,7 @@
 }
 
 .c-subheader__meta {
-	max-width: var(--grid-8-col);
+	max-width: var(--grid-max-width-staggered-double);
 	margin: var(--spacer-30) auto 0;
 	padding: var(--spacer-40) 0;
 	border-top: 1px solid var(--color-border);
