--- a/wp-content/themes/core/routes/single/css/single.pcss
+++ b/wp-content/themes/core/routes/single/css/single.pcss
@@ -17,18 +17,9 @@ Item Single
 }
 
 .item-single__featured-image-caption {
-	margin: 10px var(--grid-margin-small);
-	font-size: var(--font-size-body-xsmall);
-	line-height: 24px;
-	font-family: var(--font-family-sans-serif);
 	border-bottom: 1px solid var(--color-border);
-
-	@media (--viewport-medium) {
-		width: var(--grid-8-col);
-		margin: 10px auto;
-	}
+	max-width: var(--grid-width-staggered-double);
 }
-
 
 /*
 Single Footer
