[SQONE-275] CR: replace tags_list component with a simpler loop

--- a/wp-content/themes/core/routes/single/css/single.pcss
+++ b/wp-content/themes/core/routes/single/css/single.pcss
@@ -23,11 +23,8 @@ Item Single
 /*
 Single Footer
  */
-.c-single-footer {
 
-}
-
-.c-single-footer__content {
+.r-single-footer__content {
 	margin: var(--spacer-60) auto;
 
 	@media (--viewport-medium) {
@@ -41,7 +38,7 @@ Single Footer
 	}
 }
 
-.c-single-footer__author {
+.r-single-footer__author {
 	margin-top: var(--spacer-50);
 	margin-bottom: 0;
 	padding-top: var(--spacer-50);
@@ -56,13 +53,13 @@ Single Footer
 	}
 }
 
-.c-single-footer__author-name {
+.r-single-footer__author-name {
 	font-size: var(--font-size-body);
 	line-height: 2;
 	font-weight: bold;
 }
 
-.c-single-footer__author-description {
+.r-single-footer__author-description {
 	font-size: var(--font-size-body-small);
 	line-height: 2;
 }
