[2] Revert "[SQONE-275] CR: Fix header layout mix of l-container and l-sink"
This reverts commit e002db842b2df75fc3921c9363f26b6c24c97a73.

--- a/wp-content/themes/core/components/header/subheader/css/subheader.pcss
+++ b/wp-content/themes/core/components/header/subheader/css/subheader.pcss
@@ -5,6 +5,8 @@
  * ----------------------------------------------------------------------------- */
 
 .c-subheader {
+	position: relative;
+	display: flex;
 	align-items: center;
 	margin-bottom: var(--spacer-80);
 
