[2] Fix some inconsistencies noticed in the subheader across CPTs

--- a/wp-content/themes/core/components/header/subheader/css/subheader.pcss
+++ b/wp-content/themes/core/components/header/subheader/css/subheader.pcss
@@ -27,11 +27,14 @@
 /* CASE: Page with featured image or a background color */
 .c-subheader--has-background {
 	background: var(--color-grey-light);
-	color: var(--color-white);
 
 	@media (--viewport-medium) {
 		align-items: flex-end;
 	}
+}
+
+.c-subheader--has-image {
+	color: var(--color-white);
 }
 
 /* -----------------------------------------------------------------------------
