[2] CR: use t-light-theme class instead of color var

--- a/wp-content/themes/core/components/header/subheader/css/subheader.pcss
+++ b/wp-content/themes/core/components/header/subheader/css/subheader.pcss
@@ -24,17 +24,9 @@
 	}
 }
 
-/* CASE: Page with featured image or a background color */
+/* CASE: Page with no featured image and has a background color */
 .c-subheader--has-background {
 	background: var(--color-grey-light);
-
-	@media (--viewport-medium) {
-		align-items: flex-end;
-	}
-}
-
-.c-subheader--has-image {
-	color: var(--color-white);
 }
 
 /* -----------------------------------------------------------------------------
