--- a/wp-content/themes/core/assets/css/src/admin/block-editor/blocks.pcss
+++ b/wp-content/themes/core/assets/css/src/admin/block-editor/blocks.pcss
@@ -24,7 +24,8 @@
 		max-width: var(--grid-width-full-bleed);
 	}
 
-	/* CASE: the core "Reusable Pattern" block and core blocks within a block should be reset. */
+	/* CASE: the core "Reusable Pattern" & Group blocks and core blocks within a block should be reset. */
+	&.wp-block-group,
 	&.wp-block-block,
 	.c-block & {
 		width: 100%;
