SQONE-521 Hoist site footer to a top-level component rather than nesting.

--- a/wp-content/themes/core/components/site_footer/css/site-footer.pcss
+++ b/wp-content/themes/core/components/site_footer/css/site-footer.pcss
@@ -1,10 +1,8 @@
 /* -----------------------------------------------------------------------------
  *
- * Component: Footer
- *
- * This file is just a clearing-house, see the css directory
- * and edit the source files found there.
- *
+ * Component: Site Footer
  * ----------------------------------------------------------------------------- */
 
-@import "css/footer.pcss";
+.site-footer {
+
+}
