--- a/wp-content/themes/core/components/section_nav/css/section_nav.pcss
+++ b/wp-content/themes/core/components/section_nav/css/section_nav.pcss
@@ -4,4 +4,102 @@
  *
  * ----------------------------------------------------------------------------- */
 
+.c-section-nav {
+	border: 1px solid var(--color-border);
 
+	@media (--viewport-xsmall) {
+		overflow: hidden;
+		border: none;
+	}
+}
+
+.c-section-nav__container-toggle {
+	@mixin a-btn-reset;
+
+	position: relative;
+	display: block;
+	width: 100%;
+	padding: var(--spacer-20) var(--spacer-30);
+	text-align: left;
+	line-height: 1.5;
+	letter-spacing: 0;
+
+	@media (--viewport-xsmall) {
+		display: none;
+	}
+
+	&:after {
+		@mixin icon;
+
+		content: var(--icon-chevron-down);
+		position: absolute;
+		top: var(--spacer-20);
+		right: var(--spacer-30);
+		font-size: 24px;
+		transition: var(--transition);
+	}
+
+	&:focus,
+	&:hover {
+		text-decoration: underline;
+	}
+
+	/* CASE: Mobile menu active */
+	&[aria-expanded="true"] {
+
+		&:after {
+			transform: rotate(180deg);
+		}
+	}
+}
+
+.c-section-nav__container {
+	display: none;
+
+	@media (--viewport-xsmall) {
+		display: block;
+	}
+}
+
+.c-section-nav__list {
+	padding: 0 var(--spacer-30) var(--spacer-20);
+
+	@media (--viewport-xsmall) {
+		display: flex;
+		flex-flow: row nowrap;
+		padding: 0;
+	}
+
+	ul,
+	li {
+		@media (--viewport-xsmall) {
+			display: flex;
+			flex-flow: row nowrap;
+		}
+
+		.sub-menu {
+			margin-left: var(--spacer-30);
+		}
+
+		.sub-menu,
+		& ~ li {
+			@media (--viewport-xsmall) {
+				margin-left: var(--spacer-50);
+			}
+		}
+	}
+
+	a {
+		display: inline-block;
+		padding: 6px 0;
+
+		@media (--viewport-xsmall) {
+			white-space: nowrap;
+		}
+
+		&:focus,
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+}
