SQONE-523 Change breakpoint.

--- a/wp-content/themes/core/components/section_nav/css/section_nav.pcss
+++ b/wp-content/themes/core/components/section_nav/css/section_nav.pcss
@@ -7,7 +7,7 @@
 .c-section-nav {
 	border: 1px solid var(--color-border);
 
-	@media (--viewport-xsmall) {
+	@media (--viewport-small) {
 		overflow: hidden;
 		border: none;
 	}
@@ -24,7 +24,7 @@
 	line-height: 1.5;
 	letter-spacing: 0;
 
-	@media (--viewport-xsmall) {
+	@media (--viewport-small) {
 		display: none;
 	}
 
@@ -56,7 +56,7 @@
 .c-section-nav__container {
 	display: none;
 
-	@media (--viewport-xsmall) {
+	@media (--viewport-small) {
 		display: block;
 	}
 }
@@ -64,7 +64,7 @@
 .c-section-nav__list {
 	padding: 0 var(--spacer-30) var(--spacer-20);
 
-	@media (--viewport-xsmall) {
+	@media (--viewport-small) {
 		display: flex;
 		flex-flow: row nowrap;
 		padding: 0;
@@ -72,7 +72,7 @@
 
 	ul,
 	li {
-		@media (--viewport-xsmall) {
+		@media (--viewport-small) {
 			display: flex;
 			flex-flow: row nowrap;
 		}
@@ -83,7 +83,7 @@
 
 		.sub-menu,
 		& ~ li {
-			@media (--viewport-xsmall) {
+			@media (--viewport-small) {
 				margin-left: var(--spacer-50);
 			}
 		}
@@ -93,7 +93,7 @@
 		display: inline-block;
 		padding: 6px 0;
 
-		@media (--viewport-xsmall) {
+		@media (--viewport-small) {
 			white-space: nowrap;
 		}
 
