--- a/wp-content/themes/core/components/section_nav/index.pcss
+++ b/wp-content/themes/core/components/section_nav/index.pcss
@@ -7,4 +7,4 @@
  *
  * ----------------------------------------------------------------------------- */
 
-@import "css/section_nav.pcss";
+@import "css/section-nav.pcss";
