SQONE-672 QA repairs to tabs block.

--- a/wp-content/themes/core/components/blocks/tabs/css/tabs.pcss
+++ b/wp-content/themes/core/components/blocks/tabs/css/tabs.pcss
@@ -12,4 +12,9 @@
 
 .b-tabs__header {
 	margin-bottom: var(--spacer-40);
+
+	/* CASE: Vertical */
+	.c-block--layout-vertical & {
+		margin-bottom: var(--spacer-70);
+	}
 }
