--- a/wp-content/themes/core/components/section_nav/css/section-nav.pcss
+++ b/wp-content/themes/core/components/section_nav/css/section-nav.pcss
@@ -12,29 +12,16 @@
 	}
 }
 
-.c-section-nav__container-toggle {
+.c-section-nav__toggle {
 	@mixin a-btn-reset;
 
 	position: relative;
-	display: block;
-	width: 100%;
-	padding: var(--spacer-20) var(--spacer-30);
-	text-align: left;
-	line-height: 1.5;
-	letter-spacing: 0;
-
-	@media (--viewport-small) {
-		display: none;
-	}
 
 	&:after {
 		@mixin icon;
 
 		content: var(--icon-chevron-down);
 		position: absolute;
-		top: var(--spacer-20);
-		right: var(--spacer-30);
-		font-size: 24px;
 		transition: var(--transition);
 	}
 
@@ -49,6 +36,25 @@
 		&:after {
 			transform: rotate(180deg);
 		}
+	}
+}
+
+.c-section-nav__container-toggle {
+	display: block;
+	width: 100%;
+	padding: var(--spacer-20) var(--spacer-30);
+	text-align: left;
+	line-height: 1.5;
+	letter-spacing: 0;
+
+	@media (--viewport-small) {
+		display: none;
+	}
+
+	&:after {
+		top: var(--spacer-20);
+		right: var(--spacer-30);
+		font-size: 24px;
 	}
 }
 
@@ -123,10 +129,17 @@
 
 .c-section-nav__more-toggle {
 	@mixin a-btn-reset;
+
+	padding-right: 1.5em;
+
+	&:after {
+		right: 0;
+		font-size: 1.25em;
+	}
 }
 
 .c-section-nav__more {
-	display: none;
+	/*display: none;*/
 	position: absolute;
 	top: calc(100% + var(--spacer-10));
 	right: calc(-1 * var(--spacer-10));
