--- a/wp-content/themes/core/components/section_nav/css/section-nav.pcss
+++ b/wp-content/themes/core/components/section_nav/css/section-nav.pcss
@@ -18,6 +18,13 @@
 	}
 }
 
+/* -----------------------------------------------------------------------------
+ * Section Nav Toggles
+ *
+ * Applies base styling for both the mobile menu button and
+ * desktop "more" menu button.
+ * ----------------------------------------------------------------------------- */
+
 .c-section-nav__toggle {
 	@mixin a-btn-reset;
 
@@ -45,6 +52,10 @@
 	}
 }
 
+/* -----------------------------------------------------------------------------
+ * Section Nav Mobile Toggle Button
+ * ----------------------------------------------------------------------------- */
+
 .c-section-nav__toggle--mobile {
 	display: block;
 	width: 100%;
@@ -64,6 +75,10 @@
 	}
 }
 
+/* -----------------------------------------------------------------------------
+ * Section Nav Mobile Container
+ * ----------------------------------------------------------------------------- */
+
 .c-section-nav__container {
 	display: none;
 
@@ -72,6 +87,10 @@
 		display: block;
 	}
 }
+
+/* -----------------------------------------------------------------------------
+ * Section Nav List
+ * ----------------------------------------------------------------------------- */
 
 .c-section-nav__list {
 	padding: 0 var(--spacer-30) var(--spacer-20);
@@ -83,6 +102,10 @@
 	}
 }
 
+/* -----------------------------------------------------------------------------
+ * Section Nav List Items
+ * ----------------------------------------------------------------------------- */
+
 .section-nav__list-item {
 	@media (--viewport-small) {
 		display: flex;
@@ -90,8 +113,6 @@
 	}
 
 	& ~ li {
-		margin-left: var(--spacer-30);
-
 		@media (--viewport-small) {
 			margin-left: var(--spacer-50);
 		}
@@ -107,6 +128,10 @@
 		}
 	}
 }
+
+/* -----------------------------------------------------------------------------
+ * Section Nav Actions (links)
+ * ----------------------------------------------------------------------------- */
 
 .section-nav__action {
 	display: inline-block;
@@ -124,6 +149,10 @@
 	}
 }
 
+/* -----------------------------------------------------------------------------
+ * Section Nav "More" list item
+ * ----------------------------------------------------------------------------- */
+
 .section-nav__list-item--more {
 	display: none;
 	position: relative;
@@ -134,6 +163,10 @@
 	}
 }
 
+/* -----------------------------------------------------------------------------
+ * Section Nav "More" Toggle Button
+ * ----------------------------------------------------------------------------- */
+
 .c-section-nav__toggle--more {
 	padding-right: 1.5em;
 
@@ -142,6 +175,10 @@
 		font-size: 1.25em;
 	}
 }
+
+/* -----------------------------------------------------------------------------
+ * Section Nav "More" Container
+ * ----------------------------------------------------------------------------- */
 
 .c-section-nav__more {
 	display: none;
@@ -154,6 +191,7 @@
 	border: 1px solid var(--color-border);
 	border-radius: var(--spacer-10);
 
+	/* CASE: More menu active */
 	.c-section-nav--more-active & {
 		display: block;
 	}
