--- a/wp-content/themes/core/assets/css/src/theme/typography/anchors.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/typography/anchors.pcss
@@ -33,20 +33,16 @@ a {
 
 .anchor,
 .t-sink a {
-	color: var(--color-text);
+	color: var(--color-link);
 	text-decoration: underline;
-	font-weight: 700;
-	text-decoration-color: var(--color-link-focus);
 
 	&:hover {
 		color: var(--color-link-hover);
-		text-decoration-color: inherit;
 	}
 
 	&:focus {
 		color: var(--color-link-focus);
 		outline: none;
-		text-decoration-color: inherit;
 	}
 
 	/* CASE: light theme */
