SQONE-668 Drop contain els from block so sticky works correctly.

--- a/wp-content/themes/core/components/blocks/section_nav/css/section_nav.pcss
+++ b/wp-content/themes/core/components/blocks/section_nav/css/section_nav.pcss
@@ -3,3 +3,5 @@
  * Component: Section Nav
  *
  * ----------------------------------------------------------------------------- */
+
+.b-section-nav {}
