SQONE-668 Handle different cases & states for sticky on scroll when set up as a block.

--- a/wp-content/themes/core/assets/css/src/theme/color/_variables.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/color/_variables.pcss
@@ -70,7 +70,7 @@
 	 * Borders
 	 * ----------------------------------------------------------------------------- */
 
-	--color-border: var(--color-grey-light);
+	--color-border: var(--color-neutral-10);
 
 	/* -----------------------------------------------------------------------------
 	 * Alerts
