--- a/wp-content/themes/core/components/blocks/section_nav/css/section_nav.pcss
+++ b/wp-content/themes/core/components/blocks/section_nav/css/section_nav.pcss
@@ -4,4 +4,7 @@
  *
  * ----------------------------------------------------------------------------- */
 
-.b-section-nav {}
+.b-section-nav {
+	margin-top: var(--spacer-40);
+	margin-bottom: var(--spacer-40);
+}
