break a pcss file

--- a/wp-content/themes/core/routes/not_found/index.pcss
+++ b/wp-content/themes/core/routes/not_found/index.pcss
@@ -8,3 +8,11 @@
  * ----------------------------------------------------------------------------- */
 
 @import "css/not_found.pcss";
+
+.test {
+	font-size: 12px;
+}
+
+.test {
+	line-height: 20px;
+}
