--- a/wp-content/themes/core/assets/css/src/theme/typography/lists.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/typography/lists.pcss
@@ -32,6 +32,11 @@ li {}
 .t-sink > ul {
 	list-style: disc outside;
 	padding-left: 1.5em;
+
+	ul {
+		list-style: disc outside;
+		padding-left: 1.5em;
+	}
 }
 
 /* -------------------------------------------------------------------------
@@ -65,8 +70,13 @@ li {}
 
 .t-list--numbered,
 .t-sink > ol {
-	list-style: decimal outside;
 	padding-left: 1.5em;
+	list-style: decimal outside;
+
+	ol {
+		padding-left: 1.5em;
+		list-style: decimal outside;
+	}
 }
 
 /* -------------------------------------------------------------------------
