[SQONE-567] Fixes stylized nested list numbering/bullets

--- a/wp-content/themes/core/assets/css/src/theme/typography/lists.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/typography/lists.pcss
@@ -48,6 +48,11 @@ li {}
 	list-style: none;
 	padding-left: 0;
 
+	ul {
+		list-style: none;
+		padding-left: 0;
+	}
+
 	li {
 		position: relative;
 		padding-left: var(--spacer-40);
@@ -88,6 +93,12 @@ li {}
 	list-style: none;
 	padding-left: 0;
 	counter-reset: list-number;
+
+	ol {
+		list-style: none;
+		padding-left: 0;
+		counter-reset: list-number;
+	}
 
 	li {
 		position: relative;
