[SQONE-543]: clear floats on all blocks

--- a/wp-content/themes/core/components/blocks/_css/block-editor.pcss
+++ b/wp-content/themes/core/components/blocks/_css/block-editor.pcss
@@ -9,6 +9,7 @@
 .wp-block[data-type^="acf/"] {
 	max-width: none;
 	width: 100%;
+	clear: both;
 
 	/* Add a max-width to the edit UI for ACF blocks */
 	.acf-block-fields {
