--- a/wp-content/themes/core/components/blocks/_css/index.pcss
+++ b/wp-content/themes/core/components/blocks/_css/index.pcss
@@ -11,6 +11,7 @@
 .c-block {
 	margin-top: var(--spacer-60);
 	margin-bottom: var(--spacer-60);
+	clear: both;
 
 	@media (--viewport-medium) {
 		margin-top: var(--spacer-80);
