[SQONE-575]: add text alignment mixins / classes

--- a/wp-content/themes/core/assets/css/src/theme/typography/_utilities.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/typography/_utilities.pcss
@@ -139,3 +139,28 @@
 .t-tag {
 	@mixin t-tag;
 }
+
+/* -------------------------------------------------------------------------
+ * Text Alignment
+ * ------------------------------------------------------------------------- */
+
+.t-ta-center,
+.has-text-align-center {
+	@mixin t-ta-center;
+}
+
+.t-ta-right,
+.has-text-align-right {
+	@mixin t-ta-right;
+}
+
+.t-ta-left,
+.has-text-align-left {
+	@mixin t-ta-left;
+}
+
+.t-ta-justify,
+.has-text-align-justify {
+	@mixin t-ta-justify;
+}
+
