--- a/wp-content/themes/core/assets/css/src/theme/typography/_mixins.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/typography/_mixins.pcss
@@ -224,3 +224,23 @@
 	font-size: 13px;
 	letter-spacing: 0.5px;
 }
+
+/* -------------------------------------------------------------------------
+ * Text Alignment
+ * ------------------------------------------------------------------------- */
+
+@define-mixin t-ta-left {
+	text-align: left;
+}
+
+@define-mixin t-ta-center {
+	text-align: center;
+}
+
+@define-mixin t-ta-right {
+	text-align: right;
+}
+
+@define-mixin t-ta-justify {
+	text-align: justify;
+}
