--- a/wp-content/themes/core/assets/css/src/theme/typography/p.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/typography/p.pcss
@@ -4,7 +4,7 @@
  *
  * ----------------------------------------------------------------------------- */
 
-.t-sink > p {
+:is(.t-sink) p {
 	@mixin t-body;
 
 	/* CASE: Overline style applied via the editor. */
