[SQONE-575]: update mixing / class names

--- a/wp-content/themes/core/assets/css/src/theme/typography/_mixins.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/typography/_mixins.pcss
@@ -229,18 +229,18 @@
  * Text Alignment
  * ------------------------------------------------------------------------- */
 
-@define-mixin t-ta-left {
+@define-mixin t-text-align-left {
 	text-align: left;
 }
 
-@define-mixin t-ta-center {
+@define-mixin t-text-align-center {
 	text-align: center;
 }
 
-@define-mixin t-ta-right {
+@define-mixin t-text-align-right {
 	text-align: right;
 }
 
-@define-mixin t-ta-justify {
+@define-mixin t-text-align-justify {
 	text-align: justify;
 }
