--- a/wp-content/themes/core/assets/css/src/theme/typography/_utilities.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/typography/_utilities.pcss
@@ -144,22 +144,22 @@
  * Text Alignment
  * ------------------------------------------------------------------------- */
 
-.t-ta-center,
+.t-text-align-center,
 .has-text-align-center {
 	@mixin t-ta-center;
 }
 
-.t-ta-right,
+.t-text-align-right,
 .has-text-align-right {
 	@mixin t-ta-right;
 }
 
-.t-ta-left,
+.t-text-align-left,
 .has-text-align-left {
 	@mixin t-ta-left;
 }
 
-.t-ta-justify,
+.t-text-align-justify,
 .has-text-align-justify {
 	@mixin t-ta-justify;
 }
