[SQONE-575]: use new mixin names

--- a/wp-content/themes/core/assets/css/src/theme/typography/_utilities.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/typography/_utilities.pcss
@@ -146,21 +146,21 @@
 
 .t-text-align-center,
 .has-text-align-center {
-	@mixin t-ta-center;
+	@mixin t-text-align-center;
 }
 
 .t-text-align-right,
 .has-text-align-right {
-	@mixin t-ta-right;
+	@mixin t-text-align-right;
 }
 
 .t-text-align-left,
 .has-text-align-left {
-	@mixin t-ta-left;
+	@mixin t-text-align-left;
 }
 
 .t-text-align-justify,
 .has-text-align-justify {
-	@mixin t-ta-justify;
+	@mixin t-text-align-justify;
 }
 
