[SQONE-575]: add comment about .has-* classes

--- a/wp-content/themes/core/assets/css/src/theme/typography/_utilities.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/typography/_utilities.pcss
@@ -142,6 +142,8 @@
 
 /* -------------------------------------------------------------------------
  * Text Alignment
+ * .has-* classes are added by WP Core / Gutenberg so we'll target them
+ * by default. We'll add the .t-* classes to target our customizations.
  * ------------------------------------------------------------------------- */
 
 .t-text-align-center,
