[SQONE-609]: refactored core styles

--- a/wp-content/themes/core/assets/css/src/theme/typography/anchors.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/typography/anchors.pcss
@@ -32,7 +32,8 @@ a {
  * ------------------------------------------------------------------------- */
 
 .anchor,
-.t-sink a {
+:where(.t-sink) a,
+:is(.editor-styles-wrapper) a {
 	color: var(--color-link);
 	text-decoration: underline;
 
