--- a/wp-content/themes/core/components/blocks/core_columns/block-editor.pcss
+++ b/wp-content/themes/core/components/blocks/core_columns/block-editor.pcss
@@ -40,6 +40,14 @@
 				width: 100%;
 				margin-bottom: var(--spacer-40);
 			}
+
+			.wp-block-image {
+				width: 100%;
+			}
+
+			.wp-block-list {
+				width: 100%;
+			}
 		}
 	}
 }
